--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title> Calculadora de Financiamento </title>
   <script src="index.js">
-    <link rel="" href="">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
