--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-
 <html lang="pt-br">
 <head>
   <title> Calculadora de Financiamento </title>
+  <meta name="viewport" content="initial-scale=1">
   <script src="index.js">
     <link rel="stylesheet" href="style.css">
 </head>
