--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title> Calculadora de Financiamento </title>
   <meta name="viewport" content="initial-scale=1">
+  <meta charset="UTF-8">
   <script src="index.js">
     <link rel="stylesheet" href="style.css">
 </head>
