--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title> Calculadora de Financiamento </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta htt-equiv="X-UA-Compatible" content="IE=Edge"/>
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="style.css"/>
   <script src="index.js"></script>
