--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <form class="result"></form>
     </div>
   </div>
-  <footer><a href="https://t.me/sirmarcius"> >>> SirMarcius 2022 <<< </a>
+  <footer><a href="https://t.me/sirmarcius"> Márcio Gusmão &copy 2022 </a>
   </footer>
 </body>
 </html>
