--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="box">
       <label>Valor Financiado</label>
       <input id="valorFi" type="number">
-      <label>Taxa de Juros</label>
+      <label>Taxa de Juros (em %)</label>
       <input id="taxaJuro" type="number">
       <div id="bts">
         <input id="calc" type="button" value="Calcular" onclick="calcular()">
