--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
-<!DOCTYPE HTML>
-<html lang="pt-br">
+<html>
+
 <head>
   <title> Calculadora de Financiamento </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta htt-equiv="X-UA-Compatible" content="IE=edge"/>
-  <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="style.css"/>
-  <script src="index.js"></script>
-  </head>
+</head>
+
 <body>
   <div class="container">
     <h1 class="page-title">
       Calculadora de Financiamento</h1>
       <div class="box">
-      <label>Valor Financiado</label>
+      <label>Valor Financiado R$</label>
       <input id="valorFi" type="number">
-      <label>Taxa de Juros (em %)</label>
-      <input id="taxaJuro" type="number">
+      <!--<label>Taxa de Juros</label>
+      <input id="taxaJuro" type="number"> -->
       <div id="bts">
         <input id="calc" type="button" value="Calcular" onclick="calcular()">
         <input id="clear" type="button" value="Limpar" onclick="limpar()">
       </div>
-      <form class="result"></form>
+      <form class="result0"></form>
+      <form class="result1"></form>
+      <form class="result2"></form>
+      <form class="result3"></form>
+      <form class="result4"></form>
     </div>
   </div>
   <footer><a href="https://t.me/sirmarcius"> Márcio Gusmão &copy 2022 </a>
   </footer>
 </body>
+
 </html>
