--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<html>
+<!DOCTYPE HTML>
+
+<html lang="pt-br">
 
 <head>
   <title> Calculadora de Financiamento </title>
+  <meta name="viewport" contente="initial-scale=1">
+  <meta charset="UTF-8">
+  <script src="index.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
