--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
   <title> Calculadora de Financiamento </title>
   <meta name="viewport" contente="initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">  
   <meta charset="UTF-8">
   <script src="index.js"></script>
   <link rel="stylesheet" href="style.css">
